# pyeddies

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: getting-started.md  index.md  installation.md
examples/: 01_material_basics.py  02_bl_profile.py  03_flowparams.py
pyeddies/: __init__.py  params.py
pyeddies/material/: __init__.py  correlations.py  database.py  property.py
pyeddies/post/: __init__.py  core.py  fc.py  integral.py  interp.py  mesh_utils.py  profile.py  snapshot.py  sweep.py  timeseries.py  transforms.py  turbstats.py  wall.py
pyeddies/profile/: __init__.py  mean.py  parameter.py
pyeddies/viz/: __init__.py  contours.py  profiles.py  three_d.py
tests/: test_dryrun_ctbl.py  test_dryrun_fc.py  test_interp.py  test_material.py  test_params.py  test_post.py  test_profile.py
