[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeddies"
version = "0.1.0"
description = "Boundary layer dynamics & turbulence post-processing toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyvista>=0.40",
    "h5py>=3.0",
]

[project.optional-dependencies]
full = [
    "scipy>=1.10",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["pyeddies*"]
